# minimec-ros2

./: README.md  minimec.repos
minimec_bringup/: CMakeLists.txt  README.md  package.xml
minimec_bringup/launch/: launch_command.launch.py  launch_minimec.launch.py  launch_odrives.yaml
minimec_control/: CMakeLists.txt  README.md  package.xml
minimec_control/config/: params.yaml  view_path.rviz
minimec_control/launch/: launch_control.launch.py  launch_path_gen.launch.py
minimec_control/src/: commands.cpp  kinematics.cpp  odometry.cpp  path_generator.cpp  trajectory_tracking.cpp
minimec_description/: CMakeLists.txt  README.md  package.xml
minimec_description/config/: basic_config.rviz  params.yaml
minimec_description/launch/: view_robot.launch.py
minimec_description/urdf/: minimec.urdf.xacro
minimec_driver/: CMakeLists.txt  README.md  package.xml
minimec_driver/config/: params.yaml
minimec_driver/launch/: launch_driver.launch.py
minimec_driver/src/: minimec_driver.cpp
minimec_lights/: README.md  package.xml  setup.cfg  setup.py
minimec_lights/minimec_lights/: lights.py
minimec_msgs/: CMakeLists.txt  package.xml
minimec_msgs/msg/: WheelCommands.msg
minimec_msgs/srv/: CircularPlanRequest.srv  PlanRequest.srv  SplinePlanRequest.srv
minimec_ros/: CMakeLists.txt  package.xml
minimec_ros/config/: params.yaml
minimec_ros/launch/: launch_minimec.launch.py
minimec_ros/src/: odometry.cpp  velocity_parser.cpp
minimeclib/: CMakeLists.txt
minimeclib/include/minimeclib/: kinematics.hpp
minimeclib/src/: kinematics.cpp
setup/: README.md
setup/resources/: 00-installer-config.yaml  enable-can.service  enable-can.sh
setup/scripts/: config-can-service.sh  config-network.sh  install-ros.sh
